--- a/about.html
+++ b/about.html
@@ -102,8 +102,8 @@
 			</div>
 			<div class="col-12 col-lg col-md-12">
 				<div class="text-wrapper align-left">
-					<h1 class="mbr-section-title mbr-fonts-style mb-4 display-5"><strong>I am a sixth year PhD candidate in Economics at the University of California, Berkeley (go bears). ✨</strong></h1>
-					<p class="mbr-text mbr-fonts-style mb-4 display-7">My research interests lie in Public and Behavioral Economics. My job market paper studies the impact of reduced pension benefit and increased retirement flexibility on the employer's ability to retain workers. My other research focuses on the distributional impacts on tax-preferred property inheritances and behavioral welfare measures.<br><br>Outside of research, I like to doodle.<br><br>Contact me at kristykim [at] berkeley [dot] edu.<br></p>
+					<h1 class="mbr-section-title mbr-fonts-style mb-4 display-5"><strong>I am a first year PhD in Economics at the University of Minnesota. </strong></h1>
+					<p class="mbr-text mbr-fonts-style mb-4 display-7">Previously, I worked as a research assistant at the research department of the Central Bank of Chile. My research interests lie in understanding the role of microeconomic heterogeneity in macroeconomic outcomes. My research experience is related to firm dynamics, production networks, labor market dynamics, and pricing.<br></p>
 					<div class="mbr-section-btn mt-3"><a class="btn btn-primary display-7" href="assets/files/KristyKim_CVResume.pdf" target="_blank">CV / Resume</a> <a class="btn btn-primary-outline display-7" href="https://www.linkedin.com/in/kristykim95/" target="_blank">LinkedIn</a></div>
 				</div>
 			</div>
