--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <meta name="description" content="">
   
   
-  <title>Kristy Kim</title>
+  <title>Alvaro Castillo</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
@@ -138,7 +138,7 @@
                         <div class="slide-content">
                             <div class="item-wrapper">
                                 <div class="item-img">
-                                    <img src="assets/images/untitled-artwork-1-518x691.webp" alt="" data-slide-to="2" data-bs-slide-to="2">
+                                    <img src="assets/images/patagonia.webp" alt="" data-slide-to="2" data-bs-slide-to="2">
                                 </div>
                             </div>
                             
