--- a/index.html
+++ b/index.html
@@ -63,7 +63,6 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav nav-dropdown nav-right navbar-nav-top-padding" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html">HOME</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="research.html">RESEARCH</a></li>
-                    <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="resources.html">RESOURCES</a></li>
                     <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="about.html">ABOUT ME</a>
                     </li></ul>
                 
@@ -95,7 +94,7 @@
         <div class="row justify-content-center">
             <div class="col-12 col-md">
                 <h5 class="mbr-section-title mbr-fonts-style mb-4 display-1"><br><br><br>Hi, I'm Alvaro Castillo.<br> I am a first year Econ Ph.D. student at the University of Minnesota.</h5>
-                <h6 class="mbr-section-subtitle mbr-fonts-style mb-4 display-5"><br>Find research projects, notes from school, and tid bits about me by exploring the menu bar <strong>↗</strong></h6>
+                <h6 class="mbr-section-subtitle mbr-fonts-style mb-4 display-5"><br> something <strong>↗</strong></h6>
             </div>
             <div class="col-md-12 col-lg-6">
                 <p class="mbr-text mbr-fonts-style display-4"></p><p><br><br><br></p><br><p><br></p><br><br><p></p><p></p>
