--- a/research-ac.html
+++ b/research-ac.html
@@ -35,7 +35,8 @@
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Noto+Sans+JP:100,200,300,400,500,600,700,800,900&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans+JP:100,200,300,400,500,600,700,800,900&display=swap"></noscript>
   <link rel="preload" as="style" href="assets/mbr/css/mbr-additional.css"><link rel="stylesheet" href="assets/mbr/css/mbr-additional.css" type="text/css">
-
+  <!-- Tu estilo personalizado: enlaces en color rojo oscuro -->
+  <link rel="stylesheet" href="assets/css/style-ac.css">
   
   
   
