--- a/research-ac.html
+++ b/research-ac.html
@@ -102,8 +102,8 @@
 			</div>
 			<div class="col-12 col-lg col-md-12">
 				<div class="text-wrapper align-left">
-					<h1 class="mbr-section-title mbr-fonts-style mb-4 display-7"><strong><a href="assets/files/KristyKim_JMP.pdf" class="text-black" target="_blank">Price Rigidity within Firm-to-firm Relationships </a></strong></h1>
-					<p class="mbr-text mbr-fonts-style mb-4 display-4">with <a href="https://scholar.google.com/citations?user=-JSkVSQAAAAJ&hl=es&oi=ao" class="text-info" target="_blank">Luis Felipe Cespedes, <a href="https://sites.google.com/site/cokeconphd/home?authuser=0" class="text-info" target="_blank">Jorge Miranda-Pinto <a href="https://javierturen.wixsite.com/jturen" class="text-info" target="_blank"> , and Javier Turen</a>&nbsp;<br></a><br><br>Private retirement plans are a crucial part of worker’s compensation in the U.S. and have long been thought to influence labor supply. This study uses a cohort-based regression discontinuity design to examine how a change in the retirement plan at the largest U.S. employer, the Federal Government, impacted the retention of employees over the entire life cycle. We find that workers with less valuable employer pensions but more portable retirement benefits were more likely to separate from the government around 15 and 30 years after beginning federal service. We find smaller, statistically insignificant effects in the first few years of employment. We also find evidence that the effects are driven by highly productive workers, identified through supplemental compensation or early promotions. Our results suggest that employees respond to changes in the value of retirement benefits by leaving employers for better outside options, but that employees may be inattentive or job-locked early in their careers. These findings demonstrate that non-wage compensation impacts labor supply decisions across a worker's lifecycle and the distribution of human capital over time, particularly in labor markets where employers compete through diverse compensation structures.<a href="https://ckwroblewski.github.io/" class="text-info" target="_blank"><br></a></p>
+					<h1 class="mbr-section-title mbr-fonts-style mb-4 display-7"><strong>Price Rigidity within Firm-to-firm Relationships </a></strong></h1>
+					<p class="mbr-text mbr-fonts-style mb-4 display-4">with <a href="https://scholar.google.com/citations?user=-JSkVSQAAAAJ&hl=es&oi=ao" class="text-info" target="_blank">Luis Felipe Cespedes, <a href="https://sites.google.com/site/cokeconphd/home?authuser=0" class="text-info" target="_blank">Jorge Miranda-Pinto <a href="https://javierturen.wixsite.com/jturen" class="text-info" target="_blank"> , and Javier Turen</a>&nbsp;<br></a><br><br>Add abstract here.<br></a></p>
 					
 				</div>
 			</div>
@@ -112,6 +112,28 @@
 </section>
 
 <section data-bs-version="5.1" class="header1 cid-uDuHk9rsv5" id="header01-5z">
+
+
+<div class="container">
+		<div class="row justify-content-center">
+			<div class="col-12 col-md-12 col-lg-4 image-wrapper">
+				<img class="w-100" src="assets/newimages/displacement_website.png" alt="">
+			</div>
+			<div class="col-12 col-lg col-md-12">
+				<div class="text-wrapper align-left">
+					<h1 class="mbr-section-title mbr-fonts-style mb-4 display-7"><strong>Firm Shocks, Workers Earnings and the Extensive Margin </a></strong></h1>
+					<p class="mbr-text mbr-fonts-style mb-4 display-4">with with Ana Sofía León, Antonio Martner and Matías Tapia</a>&nbsp;<br></a><br><br>Add abstract here.<br></a></p>
+					
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
+
+<section data-bs-version="5.1" class="header1 cid-uDuHk9rsv5" id="header01-5z">	
+
+
+	
 
 
     <div class="container">
