--- a/research-ac.html
+++ b/research-ac.html
@@ -92,19 +92,21 @@
 </section>
 
 <section data-bs-version="5.1" class="header1 cid-uDuHjeX6cd" id="header01-5y">
-	
-
-
-<div class="container">
+	<div class="container">
 		<div class="row justify-content-center">
 			<div class="col-12 col-md-12 col-lg-4 image-wrapper">
 				<img class="w-100" src="assets/newimages/pricing_website.png" alt="">
 			</div>
 			<div class="col-12 col-lg col-md-12">
 				<div class="text-wrapper align-left">
-					<h1 class="mbr-section-title mbr-fonts-style mb-4 display-7"><strong>Price Rigidity within Firm-to-firm Relationships </a></strong></h1>
-					<p class="mbr-text mbr-fonts-style mb-4 display-4">with <a href="https://scholar.google.com/citations?user=-JSkVSQAAAAJ&hl=es&oi=ao" class="text-info" target="_blank">Luis Felipe Cespedes, <a href="https://sites.google.com/site/cokeconphd/home?authuser=0" class="text-info" target="_blank">Jorge Miranda-Pinto <a href="https://javierturen.wixsite.com/jturen" class="text-info" target="_blank"> , and Javier Turen</a>&nbsp;<br></a><br><br>Add abstract here.<br></a></p>
-					
+					<h1 class="mbr-section-title mbr-fonts-style mb-4 display-7"><strong>Price Rigidity within Firm-to-firm Relationships</strong></h1>
+					<p class="mbr-text mbr-fonts-style mb-4 display-4">
+						with 
+						<a href="https://scholar.google.com/citations?user=-JSkVSQAAAAJ&hl=es&oi=ao" class="text-info" target="_blank">Luis Felipe Cespedes</a>,
+						<a href="https://sites.google.com/site/cokeconphd/home?authuser=0" class="text-info" target="_blank">Jorge Miranda-Pinto</a>, and
+						<a href="https://javierturen.wixsite.com/jturen" class="text-info" target="_blank"> Javier Turen</a>&nbsp;
+						<br><br>Add abstract here.
+					</p>
 				</div>
 			</div>
 		</div>
@@ -112,18 +114,18 @@
 </section>
 
 <section data-bs-version="5.1" class="header1 cid-uDuHk9rsv5" id="header01-5z">
-
-
-<div class="container">
+	<div class="container">
 		<div class="row justify-content-center">
 			<div class="col-12 col-md-12 col-lg-4 image-wrapper">
 				<img class="w-100" src="assets/newimages/displacement_website.png" alt="">
 			</div>
 			<div class="col-12 col-lg col-md-12">
 				<div class="text-wrapper align-left">
-					<h1 class="mbr-section-title mbr-fonts-style mb-4 display-7"><strong>Firm Shocks, Workers Earnings and the Extensive Margin </a></strong></h1>
-					<p class="mbr-text mbr-fonts-style mb-4 display-4">with with Ana Sofía León, Antonio Martner and Matías Tapia</a>&nbsp;<br></a><br><br>Add abstract here.<br></a></p>
-					
+					<h1 class="mbr-section-title mbr-fonts-style mb-4 display-7"><strong>Firm Shocks, Workers Earnings and the Extensive Margin</strong></h1>
+					<p class="mbr-text mbr-fonts-style mb-4 display-4">
+						with with Ana Sofía León, Antonio Martner and Matías Tapia</a>&nbsp;
+					<br><br>Add abstract here.
+				</p>	
 				</div>
 			</div>
 		</div>
@@ -131,11 +133,6 @@
 </section>
 
 <section data-bs-version="5.1" class="header1 cid-uDuHk9rsv5" id="header01-5z">	
-
-
-	
-
-
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-12">
