--- a/research-ac.html
+++ b/research-ac.html
@@ -120,7 +120,7 @@
 				<div class="text-wrapper align-left">
 					<h1 class="mbr-section-title mbr-fonts-style mb-4 display-7"><strong>Firm Shocks, Workers Earnings and the Extensive Margin</strong></h1>
 					<p class="mbr-text mbr-fonts-style mb-4 display-4">
-						with with Ana Sofía León, Antonio Martner and Matías Tapia</a>&nbsp;
+						with Ana Sofia Leon, Antonio Martner and Matias Tapia</a>&nbsp;
 					<br><br>Add abstract here.
 				</p>	
 				</div>
@@ -129,6 +129,30 @@
 	</div>
 </section>
 
+<section data-bs-version="5.1" class="header1 cid-uDuHk9rsv5" id="header01-5z">
+	<div class="container">
+		<div class="row justify-content-center">
+			<div class="col-12 col-md-12 col-lg-4 image-wrapper">
+				<img class="w-100" src="assets/newimages/concentration_website.png" alt="">
+			</div>
+			<div class="col-12 col-lg col-md-12">
+				<div class="text-wrapper align-left">
+					<h1 class="mbr-section-title mbr-fonts-style mb-4 display-7"><strong>Employer Competition, Earnings and Markdowns</strong></h1>
+					<p class="mbr-text mbr-fonts-style mb-4 display-4">
+						with
+						<a href="https://sites.google.com/site/afgarciama/home" class="text-info" target="_blank">Alvaro Garcia-Marin</a>
+						and Matias Tapia</a>&nbsp;
+					<br><br>Add abstract here.
+				</p>	
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
+
+
+	
+	
 <section data-bs-version="5.1" class="header1 cid-uDuHk9rsv5" id="header01-5z">	
     <div class="container">
         <div class="row justify-content-center">
@@ -142,8 +166,6 @@
 </section>
 
 <section data-bs-version="5.1" class="header1 cid-uDuHjeX6cd" id="header01-5y">
-  
-
 	<div class="container">
 		<div class="row justify-content-center">
 			<div class="col-12 col-md-12 col-lg-4 image-wrapper">
@@ -185,6 +207,57 @@
 <section data-bs-version="5.1" class="header1 cid-uDuHkzr3SD" id="header01-60">
 	
 
+
+<section class="content-section" style="padding: 2rem 0;">
+  <div class="container">
+    <h2 class="mbr-section-title mbr-fonts-style mb-4 display-5"><strong>Research Assistant Experience</strong></h2>
+    <p class="mbr-text mbr-fonts-style display-7">
+      As a research assistant, I have contributed to several articles. Acknowledgements to my name can be found at:
+    </p>
+    <ul class="mbr-list mbr-fonts-style display-7">
+      <li>
+        <a href="https://academic.oup.com/ej/advance-article/doi/10.1093/ej/ueae081/7762187" target="_blank">
+          <em>Productivity Growth and Workers’ Job Transitions: Evidence from Censal Microdata</em> (E. Albagli, M. Canales, C. Syverson, M. Tapia and J. Wlasiuk), The Economic Journal, Feb 2025
+        </a>
+      </li>
+      <li>
+        <a href="https://www.sciencedirect.com/science/article/pii/S016518892400160X" target="_blank">
+          <em>Commodity Prices and Production Networks in Small Open Economies</em> (A. Silva, P. Caraiani, J. Miranda-Pinto, J. Olaya), JEBO, Nov 2024
+        </a>
+      </li>
+      <li>
+        <a href="https://www.sciencedirect.com/science/article/pii/S030439322300065X" target="_blank">
+          <em>Business Cycle Asymmetry and Input-Output Structure</em> (J. Miranda-Pinto, A. Silva, E. Young), JME, Jul 2023
+        </a>
+      </li>
+      <li>
+        <a href="https://www.sciencedirect.com/science/article/abs/pii/S0014292122002355" target="_blank">
+          <em>Saving Constraints, Inequality, and the Credit Market Response to Fiscal Stimulus</em> (J. Miranda-Pinto, D. Murphy, K. Walsh, E. Young), EER, Jan 2023
+        </a>
+      </li>
+      <li>
+        <a href="https://www.sciencedirect.com/science/article/pii/S0167268123004432" target="_blank">
+          <em>Production Network Diversification and Economic Development</em> (J. Miranda-Pinto, J. Gloria, D. Fleming-Muñoz), JEBO, Feb 2024
+        </a>
+      </li>
+      <li>
+        <a href="https://www.tandfonline.com/doi/abs/10.1080/13657305.2020.1843562" target="_blank">
+          <em>Market integration and price leadership: The U.S. Atlantic salmon market</em> (L. Salazar, J. Dresdner), Aquaculture Econ & Mgmt, 25:3
+        </a>
+      </li>
+      <li>
+        <a href="https://www.tandfonline.com/doi/full/10.1080/13657305.2022.2089771" target="_blank">
+          <em>Do Chilean imports lead prices in the EU mussel market?</em> (L. Salazar, J. Dresdner), Aquaculture Econ & Mgmt, 27:2
+        </a>
+      </li>
+      <li>
+        <a href="https://cokeconphd.github.io/Website/trade_credit_comov_GR.pdf" target="_blank">
+          <em>Trade Credit and Sectoral Comovement during US Recessions</em> (J. Miranda-Pinto, Gang Zhang), Working Paper
+        </a>
+      </li>
+    </ul>
+  </div>
+</section>
 	
 	
 
