--- a/research-ac.html
+++ b/research-ac.html
@@ -150,8 +150,6 @@
 	</div>
 </section>
 
-
-	
 	
 <section data-bs-version="5.1" class="header1 cid-uDuHk9rsv5" id="header01-5z">	
     <div class="container">
@@ -178,11 +176,11 @@
       </li>
       <li>
         <em>Commodity Prices and Production Networks in Small Open Economies</em> (A. Silva, P. Caraiani, J. Miranda-Pinto, J. Olaya), 
-        <a href="https://www.sciencedirect.com/science/article/pii/S016518892400160X" target="_blank" class="text-info">JEBO, Nov 2024</a>
+        <a href="https://www.sciencedirect.com/science/article/pii/S016518892400160X" target="_blank" class="text-info">JEDC, Nov 2024</a>
       </li>
       <li>
         <em>Business Cycle Asymmetry and Input-Output Structure</em> (J. Miranda-Pinto, A. Silva, E. Young), 
-        <a href="https://www.sciencedirect.com/science/article/pii/S030439322300065X" target="_blank" class="text-info">Journal of Monetary Economics, Jul 2023</a>
+        <a href="https://www.sciencedirect.com/science/article/pii/S030439322300065X" target="_blank" class="text-info">JME, Jul 2023</a>
       </li>
       <li>
         <em>Saving Constraints, Inequality, and the Credit Market Response to Fiscal Stimulus</em> (J. Miranda-Pinto, D. Murphy, K. Walsh, E. Young), 
@@ -193,16 +191,16 @@
         <a href="https://www.sciencedirect.com/science/article/pii/S0167268123004432" target="_blank" class="text-info">JEBO, Feb 2024</a>
       </li>
       <li>
-        <em>Market integration and price leadership: The U.S. Atlantic salmon market</em> (L. Salazar, J. Dresdner), 
-        <a href="https://www.tandfonline.com/doi/abs/10.1080/13657305.2020.1843562" target="_blank" class="text-info">Aquaculture Econ & Mgmt, 25:3</a>
+        <em>Do Chilean imports lead prices in the EU mussel market?</em> (L. Salazar, J. Dresdner), 
+        <a href="https://www.tandfonline.com/doi/full/10.1080/13657305.2022.2089771" target="_blank" class="text-info">Aquaculture Econ & Mgmt,Jun 2022</a>
       </li>
       <li>
-        <em>Do Chilean imports lead prices in the EU mussel market?</em> (L. Salazar, J. Dresdner), 
-        <a href="https://www.tandfonline.com/doi/full/10.1080/13657305.2022.2089771" target="_blank" class="text-info">Aquaculture Econ & Mgmt, 27:2</a>
-      </li>
+        <em>Market integration and price leadership: The U.S. Atlantic salmon market</em> (L. Salazar, J. Dresdner), 
+        <a href="https://www.tandfonline.com/doi/abs/10.1080/13657305.2020.1843562" target="_blank" class="text-info">Aquaculture Econ & Mgmt, Nov 2020</a>
+      </li>	    
       <li>
         <em>Trade Credit and Sectoral Comovement during US Recessions</em> (J. Miranda-Pinto, Gang Zhang), 
-        <a href="https://cokeconphd.github.io/Website/trade_credit_comov_GR.pdf" target="_blank" class="text-info">Working Paper</a>
+        <a href="https://cokeconphd.github.io/Website/trade_credit_comov_GR.pdf" target="_blank" class="text-info">R&R The Economic Journal</a>
       </li>
     </ul>
   </div>
