--- a/research-ac.html
+++ b/research-ac.html
@@ -156,7 +156,7 @@
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-12">
                 <hr class="line">
-                <p class="mbr-text align-center mbr-fonts-style my-4 display-1">Research Assistaint Experience</p>
+                <p class="mbr-text align-center mbr-fonts-style my-4 display-1">Research Assistant Experience</p>
                 <hr class="line">
             </div>
         </div>
