--- a/research-ac.html
+++ b/research-ac.html
@@ -75,6 +75,8 @@
     </nav>
 </section>
 
+<!-- WORK IN PROGRESS SECTION -->
+	
 <section data-bs-version="5.1" class="content6 cid-uDuHiHbyWb" id="content6-5x">
     
     <div class="container">
@@ -150,6 +152,47 @@
 	</div>
 </section>
 
+
+	
+<!-- OTHER WORK SECTION -->
+
+<section data-bs-version="5.1" class="header1 cid-uDuHk9rsv5" id="header01-5z">	
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-12 col-lg-12">
+                <hr class="line">
+                <p class="mbr-text align-center mbr-fonts-style my-4 display-1">Other work</p>
+                <hr class="line">
+            </div>
+        </div>
+    </div>
+</section>
+
+
+<section data-bs-version="5.1" class="header1 cid-uDuHk9rsv5" id="header01-5z">
+	<div class="container">
+		<div class="row justify-content-center">
+			<div class="col-12 col-md-12 col-lg-4 image-wrapper">
+				<img class="w-100" src="assets/newimages/firewood_website.png" alt="">
+			</div>
+			<div class="col-12 col-lg col-md-12">
+				<div class="text-wrapper align-left">
+					<h1 class="mbr-section-title mbr-fonts-style mb-4 display-7"><strong>Firewood certification programs: Key attributes and policy implications</strong></h1>
+					<p class="mbr-text mbr-fonts-style mb-4 display-4">
+						with
+						<a href="https://sites.google.com/view/mbarrientosc/home?authuser=0" class="text-info" target="_blank">Manuel Barrientos</a>						
+						Roberto Ponce, Ivan Herrera, and
+						<a href="https://scholar.google.com/citations?user=GGUaxpMAAAAJ&hl=en" class="text-info" target="_blank">Felipe Vasquez</a>
+					&nbsp;
+					<br><br>Evidence from south-central Chile shows that the concentration limits for PM<sub>10</sub> and PM<sub>2.5</sub>, defined by both the World Health Organization and national standards, are systematically exceeded, affecting approximately 10 million people. Among the sources of this pollution, firewood use accounts for the largest share. This study assesses whether consumers value environmental, social, and legal attributes associated with the firewood certification programs. We used a discrete choice model based on a sample of 500 households. According to our results, the price premium for certified firewood is about 10% in the most likely scenario, with those attributes closely related to private benefits having a higher value, compared to those of social benefits. We identify significant heterogeneity among respondents belonging to two different consumer classes: 1) those who are less price sensitive and are willing to pay for attributes related to certification; 2) those who are sensitive to prices and are not willing to pay for attributes related to certification. Since the second class includes about 46% of the sample, the implementation of certification programs could be jeopardized. Therefore, knowing this information helps us determine whether a certification system can foster the firewood industry transition to a more sustainable model.
+				</p>	
+				</div>
+			</div>
+		</div>
+	</div>
+</section>	
+
+<!-- RESEARCH ASSISTANT SECTION -->
 	
 <section data-bs-version="5.1" class="header1 cid-uDuHk9rsv5" id="header01-5z">	
     <div class="container">
