--- a/research-ac.html
+++ b/research-ac.html
@@ -168,7 +168,6 @@
     </div>
 </section>
 
-
 <section data-bs-version="5.1" class="header1 cid-uDuHk9rsv5" id="header01-5z">
 	<div class="container">
 		<div class="row justify-content-center">
@@ -177,7 +176,8 @@
 			</div>
 			<div class="col-12 col-lg col-md-12">
 				<div class="text-wrapper align-left">
-					<h1 class="mbr-section-title mbr-fonts-style mb-4 display-7"><strong>Firewood certification programs: Key attributes and policy implications</strong></h1>
+					<h1 class="mbr-section-title mbr-fonts-style mb-4 display-7"><strong><a href="https://www.sciencedirect.com/science/article/pii/S0301421519307463" class="text-black" target="_blank">Firewood certification programs: Key attributes and policy implications</strong> </a><a href="https://www.sciencedirect.com/science/article/pii/S0301421519307463" class="text-black" target="_blank">[Undergraduate thesis]</a></strong></h1>
+ </h1>
 					<p class="mbr-text mbr-fonts-style mb-4 display-4">
 						with
 						<a href="https://sites.google.com/view/mbarrientosc/home?authuser=0" class="text-info" target="_blank">Manuel Barrientos</a>						
