--- a/research-ac.html
+++ b/research-ac.html
@@ -122,7 +122,9 @@
 				<div class="text-wrapper align-left">
 					<h1 class="mbr-section-title mbr-fonts-style mb-4 display-7"><strong>Firm Shocks, Workers Earnings and the Extensive Margin</strong></h1>
 					<p class="mbr-text mbr-fonts-style mb-4 display-4">
-						with Ana Sofia Leon, Antonio Martner and Matias Tapia</a>&nbsp;
+						with Ana Sofia Leon, 
+						<a href="https://amartner.github.io/" class="text-info" target="_blank">Antonio Martner</a>,
+						and Matias Tapia</a>&nbsp;
 					<br><br>Add abstract here.
 				</p>	
 				</div>
