--- a/index.html
+++ b/index.html
@@ -219,6 +219,16 @@
             </button>
         </div>
     </div>
+
+<section class="content-footer text-center" style="padding: 2rem 0;">
+  <div class="container">
+    <p class="mbr-text mbr-fonts-style display-7" style="font-size: 0.9rem;">
+      Inspired by <a href="https://kristykim.github.io/" class="text-info" target="_blank">Kristy Kim</a>, whose website served as a helpful reference.
+    </p>
+  </div>
+</section>
+
+  
 </section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p><a style="z-index:1" href=""></a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/embla/embla.min.js"></script>  <script src="assets/embla/script.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
