--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 <section class="content-footer text-center" style="padding: 2rem 0;">
   <div class="container">
     <p class="mbr-text mbr-fonts-style display-7" style="font-size: 0.9rem;">
-      Inspired by <a href="https://kristykim.github.io/" class="text-info" target="_blank">Kristy Kim</a>, whose website served as a helpful reference.
+      Credits to <a href="https://kristykim.github.io/" class="text-info" target="_blank">Kristy Kim</a> for the website structure and design inspiration.
     </p>
   </div>
 </section>
