--- a/research-ac.html
+++ b/research-ac.html
@@ -106,7 +106,7 @@
 						<a href="https://scholar.google.com/citations?user=-JSkVSQAAAAJ&hl=es&oi=ao" class="text-info" target="_blank">Luis Felipe Cespedes</a>,
 						<a href="https://sites.google.com/site/cokeconphd/home?authuser=0" class="text-info" target="_blank">Jorge Miranda-Pinto</a>, and
 						<a href="https://javierturen.wixsite.com/jturen" class="text-info" target="_blank"> Javier Turen</a>&nbsp;
-						<br><br>Add abstract here.
+						<br><br>Abstract soon.
 					</p>
 				</div>
 			</div>
@@ -127,7 +127,7 @@
 						with Ana Sofia Leon, 
 						<a href="https://amartner.github.io/" class="text-info" target="_blank">Antonio Martner</a>,
 						and Matias Tapia</a>&nbsp;
-					<br><br>Add abstract here.
+					<br><br>Abstract soon.
 				</p>	
 				</div>
 			</div>
@@ -148,7 +148,7 @@
 						with
 						<a href="https://sites.google.com/site/afgarciama/home" class="text-info" target="_blank">Alvaro Garcia-Marin</a>
 						and Matias Tapia</a>&nbsp;
-					<br><br>Add abstract here.
+					<br><br>Abstract soon.
 				</p>	
 				</div>
 			</div>
