--- a/research-ac.html
+++ b/research-ac.html
@@ -71,7 +71,15 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav nav-dropdown nav-right navbar-nav-top-padding" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="index.html">HOME</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="research-ac.html">RESEARCH</a></li>
                     <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="about.html">ABOUT ME</a>
-                    </li></ul>
+                    </li>
+		</ul>
+
+                  <!-- Dark Mode Toggle Button -->
+                <button onclick="toggleDarkMode()" id="modeToggleBtn" class="btn" style="font-size: 1.2rem; background: none; border: none;">
+                  <span id="modeIcon">◑</span>
+                </button>
+
+		    
             </div>
         </div>
     </nav>
@@ -267,5 +275,23 @@
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
-  </body>
+  
+ <script>
+  const icon = document.getElementById('modeIcon');
+  const savedMode = localStorage.getItem('dark-mode');
+
+  if (savedMode === 'true') {
+    document.body.classList.add('dark-mode');
+    icon.textContent = '◐'; // light icon for dark mode
+  }
+
+  function toggleDarkMode() {
+    document.body.classList.toggle('dark-mode');
+    const isDark = document.body.classList.contains('dark-mode');
+    icon.textContent = isDark ? '◐' : '◑';
+    localStorage.setItem('dark-mode', isDark);
+  }
+  </script>
+
+</body>
 </html>
