--- a/research-ac.html
+++ b/research-ac.html
@@ -280,18 +280,20 @@
   const icon = document.getElementById('modeIcon');
   const savedMode = localStorage.getItem('dark-mode');
 
+  // Apply saved dark mode on page load
   if (savedMode === 'true') {
     document.body.classList.add('dark-mode');
-    icon.textContent = '◐'; // light icon for dark mode
+    icon.textContent = '◐'; // icon for dark mode
   }
 
+  // Toggle function
   function toggleDarkMode() {
     document.body.classList.toggle('dark-mode');
     const isDark = document.body.classList.contains('dark-mode');
     icon.textContent = isDark ? '◐' : '◑';
     localStorage.setItem('dark-mode', isDark);
   }
-  </script>
+</script>
 
 </body>
 </html>
