--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <h6 class="mbr-section-subtitle mbr-fonts-style mb-4 display-5"><br> A little bit of Chile <strong>↘</strong></h6>
             </div>
             <div class="col-md-12 col-lg-6">
-                <p class="mbr-text mbr-fonts-style display-4"></p><p><br><br><br></p><br><p><br></p><br><br><p></p><p></p>
+                <p class="mbr-text mbr-fonts-style display-4"><br><br><br>
             </div>
         </div>
     </div>
