--- a/about.html
+++ b/about.html
@@ -100,7 +100,7 @@
 			</div>
 			<div class="col-12 col-lg col-md-12">
 				<div class="text-wrapper align-left">
-					<h1 class="mbr-section-title mbr-fonts-style mb-4 display-5"><strong>I am a first year PhD student in Economics at the University of Minnesota. </strong></h1>
+					<h1 class="mbr-section-title mbr-fonts-style mb-4 display-5"><strong>I am a second-year PhD student in Economics at the University of Minnesota. </strong></h1>
 					<p class="mbr-text mbr-fonts-style mb-4 display-7">Previously, I worked as a research assistant at the research department of the Central Bank of Chile. My research interests lie in understanding the role of microeconomic heterogeneity in macroeconomic outcomes. My research experience is related to firm dynamics, production networks, labor market dynamics, and pricing.<br></p>
 					<div class="mbr-section-btn mt-3"><a class="btn btn-primary custom-cv-btn display-7" href="assets/files/CV_AlvaroCastillo_phd.pdf" target="_blank">CV / Resume</a> </div>
 				</div>
