Simplify author attribution in research-ac.html

--- a/research-ac.html
+++ b/research-ac.html
@@ -126,9 +126,7 @@
 					  [Submitted]
 					</p>					
 					<p class="mbr-text mbr-fonts-style mb-4 display-4">
-						with Ana Sofia Leon, 
-						<a href="https://amartner.github.io/" class="text-info" target="_blank">Antonio Martner</a>,
-						and Matias Tapia</a>&nbsp;
+						with Ana Sofia Leon and Matias Tapia</a>&nbsp;
 					<br><br>We study how idiosyncratic firm shocks transmit to workers' earnings through both the intensive and extensive margins of employment. Using a matched employer--employee census data for Chile between 2007 and 2019, we estimate the pass-through of firm productivity and sales shocks to the wages of stayers and the displacement risk and earnings losses of leavers. For continuing workers, earnings respond modestly to firm-level shocks, revealing partial wage insurance within firms. However, adverse shocks substantially raise displacement probabilities, and displaced workers suffer persistent earnings losses of 15-20 percent. Combining both margins, we show that the overall sensitivity of expected earnings to firm shocks nearly doubles relative to estimates based on stayers alone. These effects exhibit substantial heterogeneity. Young and short-tenure workers face higher displacement probability but minimal earnings losses upon displacement, while older and long-tenure workers are less likely to be displaced but experience larger and more persistent losses if displaced. Turning to stayers, lower-skilled and lower-ranked workers within firms receive more wage insurance, while higher-skilled and higher-ranked workers receive less wage insurance, except for top earners. Hence, firms appear to insure continuing employees only partially while transferring substantial risk through separations. We conclude that a comprehensive assessment of how firms transmit risk to workers must integrate both wage and employment adjustments.
 				</p>	
 				</div>
